--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0"
+    "@types/react-dom": "19.0.0",
+    "node-gyp": "^11.0.0",
+    "node-pre-gyp": "^0.17.0"
   }
 }
