--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-virtual-store-dir=C:\Users\User\Documents\nextjs-dashboard\node_modules\.pnpm 
+virtual-store-dir=C:\Users\User\Documents\nextjs-dashboard\node_modules\.pnpm
+node-linker=hoisted
+public-hoist-pattern[]=*node-gyp*
+public-hoist-pattern[]=*node-pre-gyp* 
